--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "npr", from = "src"}]
 python = "^3.8"
 click = "^8.1.7"
 rich = "^13.7.0"
+jinja2 = "^3.1.4"
 
 [tool.poetry.scripts]
 npr = "npr.cli:main"
